--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -7,6 +7,14 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location /_vite/ {
+        proxy_pass http://ben_app:5173;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass ben_app:9000;
